[package]
name = "rust-docker-starter"
version = "0.1.0"
edition = "2021"
authors = ["Starua <starua@starua.me>"]
liencense = "MIT"
description = "A starter template for Rust projects with Docker support."
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
